--- a/index.html
+++ b/index.html
@@ -1,34 +1,72 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  
   <!-- Mobile Metas -->
-  <link rel="icon" href="images/favicon.ico" type="image" sizes="16x20">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-  <!-- Site Metas -->
-  <meta name="keywords" content="" />
-  <meta name="description" content="" />
-  <meta name="author" content="" />
 
-  <title> Aegan Anegan Industries</title>
+  <!-- SEO Meta Tags -->
+  <title>Aegan Anegan Industries - Leading Manufacturing Solutions</title>
+  <meta name="description" content="Aegan Anegan Industries is a leading manufacturing company offering high-quality solutions for industrial needs. Contact us for innovative and efficient production solutions." />
+  <meta name="keywords" content="Manufacturing, Industrial Solutions, Aegan Anegan, Machinery, Production, Engineering, Industry Experts" />
+  <meta name="author" content="Aegan Anegan Industries" />
+  <link rel="canonical" href="https://www.aegan-anegan-industries.com/" />
 
-  <!-- slider stylesheet -->
+  <!-- Open Graph / Facebook Meta Tags -->
+  <meta property="og:title" content="Aegan Anegan Industries - Leading Manufacturing Solutions" />
+  <meta property="og:description" content="Aegan Anegan Industries specializes in high-quality manufacturing solutions for industries worldwide." />
+  <meta property="og:image" content="https://www.aegan-anegan-industries.com/images/og-image.jpg" />
+  <meta property="og:url" content="https://www.aegan-anegan-industries.com/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Aegan Anegan Industries - Manufacturing Experts" />
+  <meta name="twitter:description" content="Leading provider of industrial and manufacturing solutions. Contact us for reliable production services." />
+  <meta name="twitter:image" content="https://www.aegan-anegan-industries.com/images/twitter-image.jpg" />
+
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="16x16">
+  <link rel="icon" href="images/favicon-32x32.png" type="image/png" sizes="32x32">
+  <link rel="icon" href="images/favicon-48x48.png" type="image/png" sizes="48x48">
+  
+  <!-- Structured Data (JSON-LD) for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Aegan Anegan Industries",
+    "url": "https://www.aegan-anegan-industries.com/",
+    "logo": "https://www.aegan-anegan-industries.com/images/logo.png",
+    "description": "Aegan Anegan Industries is a leading manufacturer specializing in high-quality industrial solutions.",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+91-9876543210",
+      "contactType": "customer service",
+      "areaServed": "IN",
+      "availableLanguage": "English"
+    }
+  }
+  </script>
+
+  <!-- Slider Stylesheet -->
   <link rel="stylesheet" type="text/css"
     href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 
-
-  <!-- bootstrap core css -->
+  <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
 
-  <!-- fonts style -->
+  <!-- Fonts Style -->
   <link href="https://fonts.googleapis.com/css?family=Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet">
-  <!-- Custom styles for this template -->
+
+  <!-- Custom Styles -->
   <link href="css/style.css" rel="stylesheet" />
-  <!-- responsive style -->
+  
+  <!-- Responsive Styles -->
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
 
