--- a/index.html
+++ b/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <!-- Basic -->
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  
+
   <!-- Mobile Metas -->
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
   <!-- SEO Meta Tags -->
   <title>Aegan Anegan Industries - Leading Manufacturing Solutions</title>
-  <meta name="description" content="Aegan Anegan Industries is a leading manufacturing company offering high-quality solutions for industrial needs. Contact us for innovative and efficient production solutions." />
-  <meta name="keywords" content="Manufacturing, Industrial Solutions, Aegan Anegan, Machinery, Production, Engineering, Industry Experts" />
+  <meta name="description"
+    content="Aegan Anegan Industries is a leading manufacturing company offering high-quality solutions for industrial needs. Contact us for innovative and efficient production solutions." />
+  <meta name="keywords"
+    content="Manufacturing, Industrial Solutions, Aegan Anegan, Machinery, Production, Engineering, Industry Experts" />
   <meta name="author" content="Aegan Anegan Industries" />
   <link rel="canonical" href="https://www.aegan-anegan-industries.com/" />
 
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:title" content="Aegan Anegan Industries - Leading Manufacturing Solutions" />
-  <meta property="og:description" content="Aegan Anegan Industries specializes in high-quality manufacturing solutions for industries worldwide." />
+  <meta property="og:description"
+    content="Aegan Anegan Industries specializes in high-quality manufacturing solutions for industries worldwide." />
   <meta property="og:image" content="https://www.aegan-anegan-industries.com/images/og-image.jpg" />
   <meta property="og:url" content="https://www.aegan-anegan-industries.com/" />
   <meta property="og:type" content="website" />
@@ -25,14 +29,15 @@
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Aegan Anegan Industries - Manufacturing Experts" />
-  <meta name="twitter:description" content="Leading provider of industrial and manufacturing solutions. Contact us for reliable production services." />
+  <meta name="twitter:description"
+    content="Leading provider of industrial and manufacturing solutions. Contact us for reliable production services." />
   <meta name="twitter:image" content="https://www.aegan-anegan-industries.com/images/twitter-image.jpg" />
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="16x16">
   <link rel="icon" href="images/favicon-32x32.png" type="image/png" sizes="32x32">
   <link rel="icon" href="images/favicon-48x48.png" type="image/png" sizes="48x48">
-  
+
   <!-- Structured Data (JSON-LD) for SEO -->
   <script type="application/ld+json">
   {
@@ -65,7 +70,7 @@
 
   <!-- Custom Styles -->
   <link href="css/style.css" rel="stylesheet" />
-  
+
   <!-- Responsive Styles -->
   <link href="css/responsive.css" rel="stylesheet" />
 </head>
@@ -81,7 +86,7 @@
         <nav class="navbar navbar-expand-lg custom_nav-container ">
           <a class="navbar-brand" href="index.html">
             <div class="title-img">
-              <img src="images/logo.png" alt="" >
+              <img src="images/logo.png" alt="">
             </div>
             <div class="title-card">
               <h5 style="padding-left: 10px; padding-top: 10px; width: 283px; word-wrap: break-word;"><b>Aegan Anegan
@@ -151,7 +156,8 @@
             <span class="sr-only">Next</span>
           </a>
           <img src="images/logo3.png" alt="" width="70%" height="70%">
-          <p style="display: flex; color: #ffc870; justify-content: center; align-items: center; text-transform: uppercase; font-size: larger;">
+          <p
+            style="display: flex; color: #ffc870; justify-content: center; align-items: center; text-transform: uppercase; font-size: larger;">
             creation with innovation
           </p>
           <!-- <div>
@@ -198,8 +204,10 @@
               </h2>
               <hr>
             </div>
-          Our journey started as Vishnu Engineering Yuvaraja, and now we have evolved into Aegan Anegan Industries Private Limited, specializing in the manufacturing of oil extraction machines. Today, we take pride in our expanded portfolio, which includes various kinds of machines that contribute to good health, such as:
-              <br/>
+            Our journey started as Vishnu Engineering Yuvaraja, and now we have evolved into Aegan Anegan Industries
+            Private Limited, specializing in the manufacturing of oil extraction machines. Today, we take pride in our
+            expanded portfolio, which includes various kinds of machines that contribute to good health, such as:
+            <br />
 
             <div>
               <ul>
@@ -210,12 +218,16 @@
                   Steel rotary oil extraction machine
                 </li>
                 <li>
-                 Additionally, we are actively engaged in Research and Development in Construction Machinery and Equipment, as well as Industrial and Agricultural Machinery.
+                  Additionally, we are actively engaged in Research and Development in Construction Machinery and
+                  Equipment, as well as Industrial and Agricultural Machinery.
 
                 </li>
               </ul>
-              <br/>
-              At Aegan Anegan Industries, we are driven by a commitment to quality and innovation. We continuously strive for excellence in all our endeavors, ensuring that our products meet the highest standards of performance and reliability. With a focus on customer satisfaction and technological advancement, we aim to make a meaningful impact in the industries we serve.
+              <br />
+              At Aegan Anegan Industries, we are driven by a commitment to quality and innovation. We continuously
+              strive for excellence in all our endeavors, ensuring that our products meet the highest standards of
+              performance and reliability. With a focus on customer satisfaction and technological advancement, we aim
+              to make a meaningful impact in the industries we serve.
             </div>
             <div>
               <!-- <a href="">
@@ -259,7 +271,7 @@
             <div class="img-box">
               <img src="images/machine/m1.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -267,7 +279,7 @@
             <div class="img-box">
               <img src="images/machine/m2.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -275,7 +287,7 @@
             <div class="img-box">
               <img src="images/machine/m3.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -283,7 +295,7 @@
             <div class="img-box">
               <img src="images/machine/m4.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -291,7 +303,7 @@
             <div class="img-box">
               <img src="images/machine/m5.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -299,7 +311,7 @@
             <div class="img-box">
               <img src="images/machine/m6.jpg" alt="">
               <!-- <a target="_blank" class="nav-link" title=""> -->
-                <!-- <img src="images/logo.png" alt=""> -->
+              <!-- <img src="images/logo.png" alt=""> -->
               <!-- </a> -->
             </div>
           </div>
@@ -668,8 +680,9 @@
             <div class="item">
               <!-- <div class="img-box box-1"></div> -->
               <div class="detail-box">
-                <p><b>AEGAN ANEGAN INDUSTRIES PRIVATE LIMITED</b><br>No.79/44, South Street,
-                  Cuddalore Main road, Keelaiyur, Thirukovilur Tk, Kallakuruchi District 605757</p>
+                <p><b>AEGAN ANEGAN INDUSTRIES PRIVATE LIMITED</b><br>No.176/1, South Street,
+                  C.Meyyur Thirukovilur to Thiruvennainallur Road, Vilupuram District, Tamilnadu state, India. 605757.
+                </p>
               </div>
             </div>
           </a>
