--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             </h6>
             <div class="custom_heading-container">
               <h2>
-                Our Health Comes First !
+                "Innovating Today, Creating Tomorrow for a Healthier Future."
               </h2>
               <hr>
             </div>
@@ -512,7 +512,13 @@
               <div class="box">
                 <div class="detail-box">
                   <p>
-                    Content Will be Uploade Soon..............
+                    <b>🌟 Customer Testimonial 🌟</b><br />
+                    🗣️"Aegan Anegan Industries' oil extraction machines have transformed our business! The quality,
+                    durability, and efficiency of their equipment are unmatched. We have seen a significant improvement
+                    in oil purity and production efficiency. Their customer support and after-sales service are
+                    excellent. Highly recommended!"
+                    <br /> <br>
+                    — Chitra , Owner of Sri Mahalakshmi Suppliers
                   </p>
                 </div>
                 <div class="client-id">
@@ -776,7 +782,7 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      &copy; 2019 All Rights Reserved By
+      &copy; 2025 All Rights Reserved By
       <a href="https://magniontechnologies.co.in/">Magnion Technologies</a>
     </p>
   </section>
