--- a/index.html
+++ b/index.html
@@ -16,27 +16,19 @@
   <meta name="keywords"
     content="Manufacturing, Industrial Solutions, Aegan Anegan, Machinery, Production, Engineering, Industry Experts" />
   <meta name="author" content="Aegan Anegan Industries" />
-  <link rel="canonical" href="https://www.aegan-anegan-industries.com/" />
+  <link rel="canonical" href="https://www.aeganai.in/" />
 
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:title" content="Aegan Anegan Industries - Leading Manufacturing Solutions" />
   <meta property="og:description"
     content="Aegan Anegan Industries specializes in high-quality manufacturing solutions for industries worldwide." />
-  <meta property="og:image" content="https://www.aegan-anegan-industries.com/images/og-image.jpg" />
-  <meta property="og:url" content="https://www.aegan-anegan-industries.com/" />
+  <meta property="og:image" content="https://www.aeganai.in/images/logo3.png" />
+  <meta property="og:url" content="https://www.aeganai.in/  " />
   <meta property="og:type" content="website" />
 
-  <!-- Twitter Card Meta Tags -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Aegan Anegan Industries - Manufacturing Experts" />
-  <meta name="twitter:description"
-    content="Leading provider of industrial and manufacturing solutions. Contact us for reliable production services." />
-  <meta name="twitter:image" content="https://www.aegan-anegan-industries.com/images/twitter-image.jpg" />
-
   <!-- Favicon -->
-  <link rel="icon" href="images/favicon.ico" type="image/x-icon" sizes="16x16">
-  <link rel="icon" href="images/favicon-32x32.png" type="image/png" sizes="32x32">
-  <link rel="icon" href="images/favicon-48x48.png" type="image/png" sizes="48x48">
+  <link rel="icon" href="images/apple-touch-icon.png" type="image/png" sizes="52x52">
+  <link rel="icon" href="images/android-chrome-192x192.png" type="image/png" sizes="192x192">
 
   <!-- Structured Data (JSON-LD) for SEO -->
   <script type="application/ld+json">
@@ -44,8 +36,8 @@
     "@context": "https://schema.org",
     "@type": "Organization",
     "name": "Aegan Anegan Industries",
-    "url": "https://www.aegan-anegan-industries.com/",
-    "logo": "https://www.aegan-anegan-industries.com/images/logo.png",
+    "url": "https://www.aeganai.in/",
+    "logo": "https://www.aeganai.in/images/logo.png",
     "description": "Aegan Anegan Industries is a leading manufacturer specializing in high-quality industrial solutions.",
     "contactPoint": {
       "@type": "ContactPoint",
