--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
   <!-- Mobile Metas -->
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- SEO Meta Tags -->
   <title>Aegan Anegan Industries - Leading Manufacturing Solutions</title>
@@ -75,17 +75,12 @@
     <!-- header section strats -->
     <header class="header_section">
       <div class="container-fluid">
-        <nav class="navbar navbar-expand-lg custom_nav-container ">
-          <a class="navbar-brand" href="index.html">
+        <nav class="navbar navbar-expand-lg custom_nav-container">
+          <a class="navbar-brand" style="display: flex; flex-direction: row; justify-content: center; align-items: center; gap: 10px;" href="index.html">
             <div class="title-img">
               <img src="images/logo.png" alt="">
             </div>
-            <div class="title-card">
-              <h5 style="padding-left: 10px; padding-top: 10px; width: 283px; word-wrap: break-word;"><b>Aegan Anegan
-                  Industries </b></h5>
-              <h5 style="padding-left: 10px; padding-top: 10px; width: 300px; word-wrap: break-word;"><b>Private
-                  Limited</b></h5>
-            </div>
+              <h5><b style="text-wrap: initial;">Aegan Anegan Industries Private Limited</b></h5>
           </a>
           <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
               aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -187,9 +182,9 @@
       <div class="row">
         <div class="col-md-6">
           <div class="detail-box">
-            <h6>
+            <h3>
               About Us
-            </h6>
+            </h3>
             <div class="custom_heading-container">
               <h2>
                 "Innovating Today, Creating Tomorrow for a Healthier Future."
@@ -591,12 +586,11 @@
 
   <section class="service_section layout_padding">
     <div class="container">
-      <div class="d-flex flex-column align-items-end">
+      <div class="d-flex flex-column align-items-center">
         <div class="custom_heading-container">
           <hr>
           <hr>
-          <h2>
-            Sales<br> &<br> Services
+          <h2>Sales<br> &<br> Services
           </h2>
           <hr>
           <hr><br>
