Add language attribute to HTML tag and implement Content Security Policy for enhanced security

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <!-- Basic -->
@@ -48,6 +48,12 @@
     }
   }
   </script>
+
+  <!-- Content Security Policy -->
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com; style-src 'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://maxcdn.bootstrapcdn.com https://fonts.googleapis.com; img-src 'self' data: https://www.aeganai.in https://images.unsplash.com; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; frame-src 'self' https://www.google.com; object-src 'none';">
+
+  <!-- Security Note: Configure HSTS on the server -->
+  <!-- Example: Strict-Transport-Security: max-age=31536000; includeSubDomains; preload -->
 
   <!-- Slider Stylesheet -->
   <link rel="stylesheet" type="text/css"
