Add robots meta tag to index.html, update robots.txt to allow crawling, and create sitemap.xml

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     content="Manufacturing, Industrial Solutions, Aegan Anegan, Machinery, Production, Engineering, Industry Experts" />
   <meta name="author" content="Aegan Anegan Industries" />
   <link rel="canonical" href="https://www.aeganai.in/" />
+  <meta name="robots" content="index, follow">
 
   <!-- Open Graph / Facebook Meta Tags -->
   <meta property="og:title" content="Aegan Anegan Industries - Leading Manufacturing Solutions" />
